--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A project to test various packages used in React",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server .",
+    "build": "webpack .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
